# NumSim2019

./: .gitignore  CMakeLists.txt  Communication.h  Computation.cpp  Computation.h  README.md  Settings.cpp  Settings.h  main.cpp
Array2D/: Array2D.cpp  Array2D.h  FieldVariable.cpp  FieldVariable.h
PressureSolver/: GaussSeidel.h  PressureSolver.cpp  PressureSolver.h  SOR.cpp  SOR.h
StaggeredGrid/: CentralDifferences.cpp  CentralDifferences.h  Discretization.cpp  Discretization.h  DonorCell.cpp  DonorCell.h  StaggeredGrid.cpp  StaggeredGrid.h
doxygen/html/: Array2D_8cpp.html  Array2D_8h.html  Array2D_8h__dep__incl.map  Array2D_8h__dep__incl.md5  Array2D_8h__incl.map  CentralDifferences_8cpp.html  CentralDifferences_8h.html  CentralDifferences_8h__dep__incl.map  CentralDifferences_8h_source.html  Computation_8cpp.html  Computation_8cpp__incl.map  Computation_8cpp__incl.md5  Computation_8h.html  Computation_8h__dep__incl.map  Computation_8h__dep__incl.md5  Computation_8h__incl.map  Computation_8h__incl.md5  Computation_8h_source.html  Computation__solid_8cpp.html  Computation__solid_8cpp__incl.md5  Computation__solid_8h.html  Computation__solid_8h_source.html  Discretization_8cpp.html  Discretization_8cpp__incl.map  Discretization_8h__dep__incl.map  DonorCell_8cpp.html  DonorCell_8cpp__incl.map  DonorCell_8cpp__incl.md5  DonorCell_8h__dep__incl.map  DonorCell_8h__incl.md5  FieldVariable_8cpp.html  FieldVariable_8cpp__incl.map  FieldVariable_8h.html  FieldVariable_8h__dep__incl.map  FieldVariable_8h__dep__incl.md5  FieldVariable_8h_source.html  (+170 more)
eigen/: Array2D.cpp  Array2D.h  CMakeLists.txt  Computation.cpp  Computation.h  Grid.cpp  Grid.h  Result.cpp  Result.h  SOR.cpp  SOR.h  main.cpp
liddrivencavity_heat/: README.md  liddrivencavity_heat_re316_ri10.input  output_t_1.vti  output_t_10.vti  output_t_100.vti  output_t_5.vti
out1/: output_0000.vti  output_0001.vti  output_0002.vti  output_0003.vti  output_0004.vti  output_0005.vti  output_0006.vti  output_0007.vti  output_0008.vti  output_0009.vti  output_0010.vti  output_0011.vti  output_0012.vti  output_0013.vti  output_0014.vti  output_0015.vti  output_0016.vti  output_0017.vti  output_0018.vti  output_0019.vti  output_0020.vti  output_0021.vti  output_0022.vti  output_0023.vti  output_0024.vti  output_0025.vti  output_0026.vti  output_0027.vti  output_0028.vti  output_0029.vti  output_0030.vti  output_0031.vti  output_0032.vti  output_0033.vti  output_0034.vti  output_0035.vti  output_0036.vti  output_0037.vti  output_0038.vti
out2/: output_0000.vti  output_0001.vti  output_0002.vti  output_0003.vti  output_0004.vti  output_0005.vti  output_0006.vti  output_0007.vti  output_0008.vti  output_0009.vti  output_0010.vti  output_0011.vti  output_0012.vti  output_0013.vti  output_0014.vti  output_0015.vti  output_0016.vti  output_0017.vti  output_0018.vti  output_0019.vti  output_0020.vti  output_0021.vti  output_0022.vti  output_0023.vti  output_0024.vti  output_0025.vti  output_0026.vti  output_0027.vti  output_0028.vti  output_0029.vti  output_0030.vti  output_0031.vti  output_0032.vti  output_0033.vti  output_0034.vti  output_0035.vti  output_0036.vti  output_0037.vti  output_0038.vti  output_0039.vti  (+99 more)
out3/: output_0000.vti  output_0001.vti  output_0002.vti  output_0003.vti  output_0004.vti
output_writer/: output_writer.h  output_writer_paraview.cpp  output_writer_text.h
resources/: backwardfacingstep.input  backwardfacingstep_100x20.geom  karmanvortex.input  karmanvortex_100x20.geom  karmanvortex_10x10.geom  karmanvortex_parabola.input  karmanvortex_parabola_100x20.geom  karmanvortex_scenario2.input  lid_driven_cavity.geometry  lid_driven_cavity.txt  liddriven_cavity_heat_20x20.geom  main.cpp  parameters.txt  settings.cpp  settings.h
src/: CMakeLists.txt  Communication.cpp  Communication.h  Computation.cpp  Computation.h  Geometry.cpp  Geometry.h  Settings.cpp  Settings.h  input_project.txt  main.cpp  main_solid.cpp
src/Array2D/: Array2D.cpp  Array2D.h  FieldVariable.cpp  FieldVariable.h  FieldVector.cpp  FieldVector.h
src/Computation/: Computation.cpp  Computation.h  ComputationParallel.cpp  ComputationParallel.h  Computation_solid.cpp  Computation_solid.h
src/Grid/: Grid.cpp  Grid.h
src/Partitioning/: Partitioning.cpp  Partitioning.h
src/PressureSolver/: GaussSeidel.cpp  GaussSeidel.h  PressureSolver.cpp  PressureSolver.h  SOR.cpp  SOR.h
src/StaggeredGrid/: CentralDifferences.cpp  CentralDifferences.h  Discretization.cpp  Discretization.h  DonorCell.cpp  DonorCell.h  StaggeredGrid.cpp  StaggeredGrid.h
src/TemperatureSolver/: GaussSeidel.cpp  GaussSeidel.h  TemperatureSolver.cpp  TemperatureSolver.h
src/Util/: GeometryParser.cpp  GeometryParser.h  InputParser.cpp  InputParser.h  Utils.cpp  Utils.h
src/output_writer/: output_writer.cpp  output_writer.h  output_writer_paraview.cpp  output_writer_paraview.h  output_writer_paraview_parallel.cpp  output_writer_paraview_parallel.h  output_writer_text.cpp  output_writer_text.h  output_writer_text_parallel.cpp  output_writer_text_parallel.h
src/resources/cmake_test/: CMakeLists.txt
src/resources/cmake_test/src/output_writer/: write_paraview_output.cpp
src/resources/doxygen/: 0__staggered__grid_8h_source.html  classCentralDifferences.html  classCentralDifferences__inherit__graph.md5  classComputation.html  classDiscretization-members.html  classFieldVariable__inherit__graph.map  classFieldVariable__inherit__graph.md5  classOutputWriterParaview__inherit__graph.md5  classOutputWriterText.html  classOutputWriter__inherit__graph.md5  classPressureSolver__inherit__graph.md5  classSOR-members.html  classSOR.html  classStaggeredGrid-members.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_b61fbff7c3a152a34ade4ad591ce714c.html  inherit_graph_3.map  inherit_graph_6.map  structSettings__coll__graph.map  structSettings__coll__graph.md5  structSimulationData__coll__graph.md5
src/resources/doxygen/search/: all_2.js  all_b.js  classes_0.js  classes_1.js  classes_8.js  functions_0.js  functions_4.js  functions_8.js  variables_7.js  variables_8.js
(+889 files in other folders)
